# libffi

./: .appveyor.yml  .gitlab-ci.yml  Makefile.am  configure.ac  fficonfig.h.meson  libffi.pc.in  meson.build  meson_options.txt
include/: ffi.h.in  ffi_common.h  ffi_noarch.h.meson  meson.build
m4/: ax_compiler_vendor.m4
src/: closures.c  meson.build
src/arm/: ffi.c
src/x86/: ffi64.c  ffiold-msvc.c  ffiw64.c  win64.S  win64_intel.S
testsuite/libffi.bhaible/: bhaible.exp  test-call.c  test-callback.c
